Normalize formatting of all entity lists. Adds date columns.
Remove namespace prefix from entity lists.

Add wait and init time to activation list.

Add column to indicate compositions.

Record timeouts in activation list.

Update tests for timezones.

Format JSON.

--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,7 @@
     },
     "globals": {
       "fixtureFile": true,
+      "fixtureFileWithTimeZoneAdjustment": true,
       "fixtureJson": true,
       "fixtureZip": true,
       "fakeFileSystem": true,
