--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "debug": "^4.1.1",
     "js-yaml": "^3.13.1",
     "lodash.clonedeep": "^4.5.0",
+    "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "openwhisk": "^3.21.2",
     "openwhisk-fqn": "^0.0.2",
