--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "posttest": "eslint src test e2e",
     "test": "npm run unit-tests",
     "unit-tests": "jest --ci",
-    "prepack": "oclif-dev manifest && oclif-dev readme",
+    "prepare": "oclif-dev manifest && oclif-dev readme",
     "postpack": "rm -f oclif.manifest.json",
     "version": "oclif-dev readme && git add README.md",
     "e2e": "jest --collectCoverage=false --testRegex './e2e/e2e.js'"
