--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest-junit": "^10.0.0",
     "jest-plugin-fs": "^2.9.0",
     "@types/jest": "^26.0.10",
+    "rimraf": "^3.0.2",
     "stdout-stderr": "^0.1.9"
   },
   "engines": {
@@ -77,7 +78,7 @@
     "test": "npm run unit-tests",
     "unit-tests": "jest --ci",
     "prepare": "oclif-dev manifest && oclif-dev readme",
-    "postpack": "rm -f oclif.manifest.json",
+    "postpack": "rimraf oclif.manifest.json",
     "version": "oclif-dev readme && git add README.md",
     "e2e": "jest --collectCoverage=false --testRegex './e2e/e2e.js'"
   },
